centering footnote element

--- a/index.html
+++ b/index.html
@@ -106,20 +106,21 @@
           </li>
         </ul>
       </main>
-      <br /><br />
-      <p1>
-        "If you want to be the best, you have to work hard, never stop killing it everyday" - Jose Fernandez
-      </p1>
-      
-      <p><strong>
+
+      <blockquote class="quote">
+        "If you want to be the best, you have to work hard, never stop killing
+        it everyday"&nbsp;-&nbsp;Jose&nbsp;Fernandez
+      </blockquote>
+
+      <p class="footnote">
         Learn more about this great athlete on
         <a
           id="tribute"
           href="https://en.wikipedia.org/wiki/Jos%C3%A9_Fern%C3%A1ndez_(pitcher)"
           target="_blank"
-          >Jose Fernandez (pitcher)</a
-        >
-      </p></strong>
+          >Jose Fernandez (pitcher)
+        </a>
+      </p>
     </div>
   </body>
 </html>
